# lin_alg

./: Array.cpp  Array.h  CMakeLists.txt  README.md  TestLinALg.h.in  main.cpp
lib/: Array.cpp  Array.h  CMakeLists.txt  Matrix.cpp  Matrix.h
src/: main  main.cpp
